--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lightweight-charts": "^4.2.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "lightweight-charts": "^4.2.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
