--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lightweight-charts": "^4.2.3",
+    "lightweight-charts": "5.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
