--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sonner": "^2.0.7",
-    "xstate": "^5.26.0"
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
